# diplom

./: .gitignore  README.md  generated.py  main.py  pdf.py  pyproject.toml  requirements.txt
