[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["Heidi Mork <heidi.mork@nrk.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
numpy = "^1.26.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
